improvements - wip
merged